--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -8,6 +8,11 @@
 @import "base";
 @import "layout";
 
+@import "article/collaboration_with_facebook";
+@import "article/discussions";
+@import "article/editorials";
+@import "article/social_media";
+
 @import "homepage/cover_story";
 @import "homepage/homepage_donate_and_subscribe";
 @import "homepage/promises";
