--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <% if @page_number %>
-  <p class="full-width"><b>Strana <%= @page_number %></b> z archivu článků:</p>
+  <p class="full-width"><b>Strana <%= @page_number %></b> z archivu výstupů:</p>
 <% end %>
 
 <% @articles.each do |article| %>
