--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <body>
     <%= render partial: "shared/facebook" %>
 
+    <div class="christmas"></div>
     <div class="container">
       <%= render partial: "shared/header" %>
       <%= render partial: "shared/nav" %>
