Fix mobile menu.

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -54,6 +54,11 @@
       margin-bottom: 1rem;
     }
   }
+
+  div.christmas {
+    height: 128px;
+    background-size: auto 128px;
+  }
 }
 
 @media (min-width: 900px) {
