--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -9,6 +9,11 @@ body {
 
 .google-signin-btn {
   display: inline-block;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
 
   width: 191px;
   height: 46px;
