--- a/app/views/statement/show.html.erb
+++ b/app/views/statement/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title, @statement.speaker.full_name + ': ' + "„#{@statement.content}“".truncate(45)) %>
-<% content_for(:description, 'Tento výrok byl ověřen jako ' + @statement.approved_assessment.veracity.name.downcase) %>
+<% content_for(:description, 'Tento výrok byl ověřen jako ' + @statement.approved_assessment.veracity.name) %>
 <% content_for(:image_src, @statement.preview_image.attached? ? polymorphic_url(@statement.preview_image) : nil) %>
 
 <section
