--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -11,7 +11,7 @@
   <aside class="organizations" id="partners">
     <h2>Projekt Demagog.cz spolupracuje s:</h2>
     <p>
-      <a title="Little Gretta" href="http://littlegreta.co.uk/">
+      <a title="Little Greta" href="http://littlegreta.co.uk/">
         <img class="lazy-load" data-src="<%= asset_path('partners/little-greta.svg') %>" />
       </a>
       <a title="Newton Media" href="https://www.newtonmedia.cz/cs">
@@ -23,8 +23,17 @@
   <aside class="organizations" id="ifcn">
     <h2>Demagog.cz ctí kodex zásad Mezinárodní factcheckingové organizace (IFCN):</h2>
     <p>
-      <a href="https://ifcncodeofprinciples.poynter.org/profile/demagogcz" title="IFCN signatory" target="_blank">
-        <img src="https://cdn.ifcncodeofprinciples.poynter.org/storage/badges/36C9D629-AED1-C760-8B88-9FD45DD9156F.png" style="max-width:100%" />
+      <a href="https://ifcncodeofprinciples.poynter.org/profile/demagogcz" target="_blank">
+        <img src="https://cdn.ifcncodeofprinciples.poynter.org/storage/badges/36C9D629-AED1-C760-8B88-9FD45DD9156F.png" alt="Demagog.cz is IFCN signatory" style="max-width:100%" />
+      </a>
+    </p>
+  </aside>
+
+  <aside class="organizations" id="facebook-partner">
+    <h2>Demagog.cz ověřuje pravdivost vybraného obsahu pro společnost Facebook:</h2>
+    <p>
+      <a href="https://www.facebook.com/journalismproject/programs/third-party-fact-checking?content_id=Ez92MVl4asoxvNL" target="_blank">
+        <img class="lazy-load" data-src="<%= asset_path("partners/facebook-factchecking-partner.png") %>" alt="Badge of independent third-party facth-checking partner of Facebook" />
       </a>
     </p>
   </aside>
