UX changes to promises menu and mobile menu

--- a/app/assets/stylesheets/shared/_nav.scss
+++ b/app/assets/stylesheets/shared/_nav.scss
@@ -33,7 +33,7 @@
       right: 0;
       z-index: 1000;
       margin: 0;
-      padding: 1.5rem 15px 0;
+      padding: 1.5rem 15px;
       background-color: #f4f9fd;
 
       li.menu-item {
