Show Politici item in the main menu right away for now

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -10,14 +10,17 @@
     ]
   ),
   Struct::NavLink.new("Komentáře", '/komentare'),
-  Struct::NavSubmenu.new(
-    "Přehledy",
-    [
-      # TODO: Browsing through statements needs to be implemented first
-      # Struct::NavLink.new('Výroky', '/vyroky'),
-      Struct::NavLink.new('Politici', speakers_path())
-    ]
-  ),
+  # TODO: It is confusing to have only one item "Politici" in the dropdown "Prehledy",
+  # so before we have more items, lets just put "Politici" there without dropdown
+  Struct::NavLink.new("Politici", speakers_path()),
+  # Struct::NavSubmenu.new(
+  #   "Přehledy",
+  #   [
+  #     # TODO: Browsing through statements needs to be implemented first
+  #     # Struct::NavLink.new('Výroky', '/vyroky'),
+  #     Struct::NavLink.new('Politici', speakers_path())
+  #   ]
+  # ),
   Struct::NavSubmenu.new(
     'Sliby',
     [
