--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -5,9 +5,7 @@
     <h3 style="margin-top: 30px">Přihlášení</h3>
 
     <div style="margin-top: 60px; margin-bottom: 60px;">
-      <%= form_tag(user_google_oauth2_omniauth_authorize_path, method: 'post') do %>
-        <button type="submit" class="google-signin-btn"></button>
-      <% end %>
+      <%= link_to "", user_google_oauth2_omniauth_authorize_path, class: '' %>
     </div>
 
     <p>
