Update promises homepage banner

--- a/app/views/homepage/_promises.html.erb
+++ b/app/views/homepage/_promises.html.erb
@@ -6,10 +6,10 @@
 
     <section class="title-and-perex">
       <h2>
-        <%= link_to("Sledujeme sliby vlády Andreje Babiše", "/sliby/druha-vlada-andreje-babise") %>
+        <%= link_to("Hodnotíme sliby vlády Andreje Babiše", "/sliby/druha-vlada-andreje-babise") %>
       </h2>
       <p>
-        Vybrali jsme 50&nbsp;slibů z&nbsp;Programového prohlášení vlády a&nbsp;sledujeme, jak se je vládě daří plnit.
+        Vybrali jsme 50&nbsp;slibů z&nbsp;Programového prohlášení vlády a&nbsp;sledovali, jak se je vládě dařilo plnit.
         <a href="/sliby/druha-vlada-andreje-babise">
           Na&nbsp;analýzu&nbsp;slibů&nbsp;&rarr;
         </a>
