--- a/app/views/article/_preview.html.erb
+++ b/app/views/article/_preview.html.erb
@@ -1,3 +1,5 @@
+<% article_presenter = ArticlePresenter.new(article) %>
+
 <article class="preview s-article">
   <a title="<%= article.title %>" href="<%= article_path(article) %>" class="illustration">
     <% if article.illustration.attached? %>
@@ -5,10 +7,10 @@
     <% else %>
       <img src="<%= asset_path("article-illustration-default-preview.svg") %>" alt="Ilustrační obrázek k výstupu <%= article.title %>">
     <% end %>
-    <% if show_article_factcheck_video(article) %>
+    <% if article_presenter.show_factcheck_video %>
       <div class="factcheck-video-label">
-        <img src="<%= asset_path("play-icon.svg") %>" class="factcheck-video-label-play-icon" alt="Spustit <%= article_factcheck_video_record_name(article) %>">
-        <span class="factcheck-video-label-text"><%= article_factcheck_video_record_name(article).capitalize %> propojený s ověřením</span>
+        <img src="<%= asset_path("play-icon.svg") %>" class="factcheck-video-label-play-icon" alt="Spustit <%= article_presenter.factcheck_video_record_name %>">
+        <span class="factcheck-video-label-text"><%= article_presenter.factcheck_video_record_name.capitalize %> propojený s ověřením</span>
       </div>
     <% end %>
   </a>
@@ -16,12 +18,12 @@
   <div class="rest">
     <div class="speakers">
       <% if article.article_type.name == ArticleType::DEFAULT %>
-        <% for speaker in article.unique_speakers %>
-          <%= render(partial: 'shared/portrait', object: speaker, as: :speaker) %>
+        <% for source_speaker in article_presenter.factcheck_source_speakers %>
+          <%= render(partial: 'shared/portrait', object: source_speaker, as: :speaker) %>
         <% end %>
       <% end %>
       <% if article.article_type.name == ArticleType::SINGLE_STATEMENT %>
-        <%= render(partial: 'shared/portrait', object: article.single_statement.speaker, as: :speaker) %>
+        <%= render(partial: 'shared/portrait', object: article.single_statement.source_speaker, as: :speaker) %>
       <% end %>
     </div>
 
