--- a/app/views/homepage/_cover_story.html.erb
+++ b/app/views/homepage/_cover_story.html.erb
@@ -1,12 +1,14 @@
 <% if @cover_story %>
+  <% article_presenter = ArticlePresenter.new(@cover_story) %>
+
   <article class="container-homepage-cover_story">
     <% if @cover_story.illustration.attached? %>
       <a title="<%= @cover_story.title %>" href="<%= article_path(@cover_story) %>" class="illustration">
         <img src="<%= @cover_story.illustration.url %>" alt="<%= @cover_story.title %>" />
-        <% if show_article_factcheck_video(@cover_story) %>
+        <% if article_presenter.show_factcheck_video %>
           <div class="factcheck-video-label">
-            <img src="<%= asset_path("play-icon.svg") %>" class="factcheck-video-label-play-icon" alt="Spustit <%= article_factcheck_video_record_name(@cover_story) %>">
-            <span class="factcheck-video-label-text"><%= article_factcheck_video_record_name(@cover_story).capitalize %> propojený s ověřením</span>
+            <img src="<%= asset_path("play-icon.svg") %>" class="factcheck-video-label-play-icon" alt="Spustit <%= article_presenter.factcheck_video_record_name %>">
+            <span class="factcheck-video-label-text"><%= article_presenter.factcheck_video_record_name.capitalize %> propojený s ověřením</span>
           </div>
         <% end %>
       </a>
@@ -55,23 +57,27 @@
         </p>
       <% end %>
 
-      <section class="speakers">
-        <% @cover_story.unique_speakers.each do |speaker| %>
-          <div class="speakers-item">
-            <%= render(
-              partial: "shared/speaker_stat",
-              locals: {
-                speaker: speaker,
-                stats: @cover_story.speaker_stats(speaker),
-                lazy_load_images: false
-              })
-            %>
-          </div>
-        <% end %>
-        <% if @cover_story.article_type.name == ArticleType::SINGLE_STATEMENT %>
-          <%= render(partial: 'shared/portrait', object: @cover_story.single_statement.speaker, as: :speaker) %>
-        <% end %>
-      </section>
+      <% if @cover_story.article_type.name == ArticleType::DEFAULT || @cover_story.article_type.name == ArticleType::SINGLE_STATEMENT %>
+        <section class="speakers">
+          <% if @cover_story.article_type.name == ArticleType::DEFAULT %>
+            <% article_presenter.factcheck_source_speakers.each do |source_speaker| %>
+              <div class="speakers-item">
+                <%= render(
+                  partial: "shared/speaker_with_stats",
+                  locals: {
+                    speaker: source_speaker,
+                    stats: article_presenter.factcheck_source_speaker_stats(source_speaker),
+                    lazy_load_images: false
+                  })
+                %>
+              </div>
+            <% end %>
+          <% end %>
+          <% if @cover_story.article_type.name == ArticleType::SINGLE_STATEMENT %>
+            <%= render(partial: 'shared/portrait', object: @cover_story.single_statement.source_speaker, as: :speaker) %>
+          <% end %>
+        </section>
+      <% end %>
     </div>
   </article>
 <% end %>
