--- a/app/views/shared/_portrait.html.erb
+++ b/app/views/shared/_portrait.html.erb
@@ -1,9 +1,11 @@
-<% if speaker.avatar.attached? %>
+<% speaker_presenter = SpeakerPresenter.new(speaker) %>
+
+<% if speaker_presenter.has_portrait? %>
   <figure class="portrait">
     <% if local_assigns[:lazy_load_images] == false %>
-      <img class="lazy-load" data-src="<%= speaker.avatar.url %>" alt="<%= speaker.full_name %>">
+      <img class="lazy-load" data-src="<%= speaker_presenter.portrait_url %>" alt="<%= speaker_presenter.full_name %>">
     <% else %>
-      <img src="<%= speaker.avatar.url %>" alt="<%= speaker.full_name %>" />
+      <img src="<%= speaker_presenter.portrait_url %>" alt="<%= speaker_presenter.full_name %>" />
     <% end %>
   </figure>
 <% end %>
