--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,4 +1,4 @@
-<ul class="stats">
+<ul class="container-shared-stats">
   <li title="Pravda" class="true <%= "none" if stats[:true].zero? %>">
     <%= stats[:true] %> <span class="hidden">&times; Pravda</span>
   </li>
