--- a/app/assets/stylesheets/statement/show.scss
+++ b/app/assets/stylesheets/statement/show.scss
@@ -3,11 +3,13 @@
   margin-top: 3rem;
 
   .speaker {
-    display: inline-block;
-    text-align: center;
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
     .portrait  {
+      flex: 0 0 var(--large-portrait);
       width: var(--large-portrait);
       height: var(--large-portrait);
       margin: 0 1rem;
@@ -15,15 +17,22 @@
     }
 
     .name {
-      display: inline-block;
-      margin: 0.5rem 0;
+      margin: 0.5rem 0 0 0;
 
+      text-align: left;
       font-size: 22px;
       font-weight: 700;
       color: var(--violet);
     }
 
-    &:hover {
+    .role {
+      margin: 0.5rem 0;
+
+      color: var(--violet);
+      text-align: left;
+    }
+
+    &:hover, &:focus {
       text-decoration: none;
 
       .portrait {
@@ -33,10 +42,16 @@
       .name {
         color: var(--orange);
       }
+
+      .role {
+        color: var(--orange);
+      }
     }
   }
 
   .statement-content {
+    margin-top: 3px;
+
     blockquote {
       position: relative;
       border-radius: 5px;
@@ -65,27 +80,6 @@
         pointer-events: none;
       }
 
-      .important-statement-sign {
-        position: absolute;
-        right: 0;
-        top: 50%;
-        width: 90px;
-
-        margin-top: -42px;
-
-        text-align: center;
-
-        color: var(--orange);
-        font-size: 12px;
-        font-weight: 700;
-        text-transform: uppercase;
-
-        .important-statement-icon {
-          font-size: 45px;
-          line-height: 1;
-        }
-      }
-
       @media (max-width: 899.9px) {
         margin-top: 0;
 
@@ -101,19 +95,63 @@
     }
 
     cite {
-      opacity: 0.6;
-
+      display: block;
+      color: #918AA8;
+      font-size: 14px;
+      line-height: 1.3;
+      text-transform: uppercase;
+      margin: 10px 0 0 24px;
+      font-style: normal;
+  
       &::before {
         content: '— ';
+        margin: 0 2.5px 0 2px;
       }
-
+  
       .date {
         white-space: nowrap;
       }
     }
 
+    > .editor-picked-label {
+      @include editor_picked_label(1.17);
+  
+      margin: 8px 0 0 24px;
+    }
+
+    .tags-list {
+      margin: 6px 0 0 24px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+  
+      .tag-item {
+        flex: 0 0 auto;
+        margin-right: 10px;
+        color: #918AA8;
+        font-size: 14px;
+        line-height: 1.3;
+        text-transform: uppercase;
+        white-space: nowrap;
+  
+        &::before {
+          content: '';
+          display: inline-block;
+          position: relative;
+          top: 2px;
+          width: 14px;
+          height: 14px;
+          margin-right: 5px;
+          background-image: image-url('tag-icon.svg');
+          background-position: 0px 0px;
+          background-repeat: no-repeat;
+          background-size: 14px;
+        }
+      }
+    }
+
     & > h1 {
-      margin-top: 4rem;
+      margin-top: 3rem;
       margin-bottom: 2rem;
 
       .veracity {
@@ -124,21 +162,23 @@
       }
     }
 
+    .infoboxes-list {
+      margin: 4rem 0 0 0;
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .infobox-item {
+      flex: 0 0 auto;
+      margin: 0 0 12px 0;
+    }
+
     aside {
       margin-top: 4rem;
 
       & > h1 {
         margin-bottom: 2rem;
       }
-    }
-  }
-
-  &.important-statement blockquote {
-    background: var(--statement-important-background);
-    padding-right: 90px;
-
-    &:after {
-      border-right-color: var(--statement-important-background);
     }
   }
 
@@ -165,6 +205,15 @@
     .speaker {
       flex: 1 0 16.66666667%;
       margin-right: var(--gap);
+      flex-direction: column;
+
+      .name {
+        text-align: center;
+      }
+
+      .role {
+        text-align: center;
+      }
     }
 
     .statement-content {
