Editor-picked statement copy

--- a/app/views/shared/_infobox.html.erb
+++ b/app/views/shared/_infobox.html.erb
@@ -16,7 +16,7 @@
         Které diskuze ověřujeme a&nbsp;jak z&nbsp;nich vybíráme výroky?
       <% elsif topic == :editor_picked_statements %>
         <span class="text-inner">Co znamená označení</span>
-        <span class="editor-picked-label">Vybraný výrok Demagog.cz</span>?
+        <span class="editor-picked-label">Výrok ve výběru Demagog.cz</span>?
       <% end %>
     </div>
   </button>
