--- a/app/views/statement/_detail.html.erb
+++ b/app/views/statement/_detail.html.erb
@@ -32,7 +32,7 @@
       <% end %>
 
       <% if statement.important %>
-        <div class="editor-picked-label">Vybraný výrok Demagog.cz</div>
+        <div class="editor-picked-label">Výrok ve výběru Demagog.cz</div>
       <% end %>
 
       <% if statement.tags.size > 0 %>
